Fix section 4+5 overflow

--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -53,13 +53,13 @@
 		transform: translateX(10%);
 	}
 	.section5__bottom-container p:nth-of-type(3) {
-		transform: translateX(15%);
+		transform: translateX(25%);
 	}
 	.section5__bottom-container p:nth-of-type(4) {
-		transform: translateX(20%);
+		transform: translateX(50%);
 	}
 	.section5__bottom-container p:nth-of-type(5) {
-		transform: translateX(25%);
+		transform: translateX(40%);
 	}
 
 	.section-info__about {
