--- a/css/style.css
+++ b/css/style.css
@@ -81,10 +81,9 @@ header button:hover {
 
 /*  Section 3 - Valley */
 .section3 {
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
-	background-image: url(../assets/images/pexels-clément-proust-moreogromsdal.jpeg);
-	background-position: left;
+	background-image: url(../assets/images/pexels-clément-proust-moreogromsdal.jpeg);  /* @TODO bg-image not showing on netlify-link */
 	background-size: cover;
 	background-position-x: -150px;
 	display: flex;
@@ -108,13 +107,14 @@ header button:hover {
 
 /* Section 4 - Bergen */
 .section4 {
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 	background-image: url(../assets/images/bergen-ehsan-haque.jpeg);
 	background-position: center;
 	background-size: cover;
 	display: flex;
 	align-items: flex-end;
+	overflow: hidden;
 }
 
 .section4__caption-container {
@@ -160,7 +160,7 @@ header button:hover {
 	font-size: var(--font-size-large);
 	font-weight: 500;
 	padding-top: 5%;	
-	margin-left: 35%;
+	margin-left: 40%;
 }
 
 .section5__bottom-container {
@@ -173,14 +173,15 @@ header button:hover {
 	flex-direction: column;
 	justify-content: space-evenly;
 	padding-top: 40vh;
-	padding-left: var(--spacing-small);
-	
+	padding-left: var(--spacing-small);	
 }
 
 .section5__bottom-container p {
+	width: fit-content;
 	font-size: var(--font-size-xlarge);
 	font-weight: 500;
 	color: var(--background);
+
 
 }
 
